--- a/branches/login/EnterpriseApplication2-war/web/newxhtml.xhtml
+++ b/branches/login/EnterpriseApplication2-war/web/newxhtml.xhtml
@@ -7,8 +7,10 @@ and open the template in the editor.
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>TODO supply a title</title>
+        
     </head>
     <body>
-        <div>TODO write content</div>
+        <h1>Blah blah blah</h1>
+        <div>TODO write </div>
     </body>
 </html>
