--- a/branches/admin2/admin2-war/web/createAccount.xhtml
+++ b/branches/admin2/admin2-war/web/createAccount.xhtml
@@ -21,7 +21,7 @@
     <p:menubar>  
         <p:submenu label="Account" icon="ui-icon-document">  
             <p:menuitem value="All Account" url="allAccount.xhtml" icon="ui-icon-arrowreturnthick-1-w"/> 
-            <p:menuitem value="Create Account" url="createAccount.xhtml" icon="ui-icon-arrowreturnthick-1-e"/>  
+            <p:menuitem value="Create" url="createAccount.xhtml" icon="ui-icon-arrowreturnthick-1-e"/>  
         </p:submenu>  
   
         <p:submenu label="Application" icon="ui-icon-pencil">  
@@ -34,7 +34,7 @@
  </p:menubar>
       
         </div>
-        
+    <br /> 
     <h3>Create Account</h3>
     <br />
      <h:form>			
