working with tabless

--- a/branches/admin2/admin2-war/web/allAccount.xhtml
+++ b/branches/admin2/admin2-war/web/allAccount.xhtml
@@ -46,15 +46,15 @@
         </f:facet>  
   
         <p:column headerText="StaffID">  
-            <h:outputText value="#{createBean.userName}" />  
+            <h:outputText value="#{staff.staffid}" />  
         </p:column> 
   
         <p:column headerText="UserName">  
-            <h:outputText value="#{createBean.userName}" />  
+            <h:outputText value="#{staff.password}" />  
         </p:column>  
   
         <p:column headerText="Password">  
-            <h:outputText value="#{createBean.password}" />  
+            <h:outputText value="#{staff.password}" />  
         </p:column>  
   
     </p:dataTable>  
