--- a/branches/travelProfile/travellerProfile/travellerProfile-war/web/travelProfile.xhtml
+++ b/branches/travelProfile/travellerProfile/travellerProfile-war/web/travelProfile.xhtml
@@ -70,7 +70,7 @@
                             <h:message for="ttl"/>
 
                             <h:outputText value="Identity Number: *" />  
-                            <p:inputText id="identity" required="true" value="#{travel.idNo}" requiredMessage="Required Field"/>  
+                            <p:inputText id="identity" value="#{travel.idNo}" required="true" requiredMessage="Required Field"/>  
                             <p:message for="identity"/>
                             
                             <h:outputText value="Business Address: *" />  
