Fixed issuse with heading in authorisation.
Using latest database from repository.

--- a/branches/Aaron/approval/approval-war/web/authorisation.xhtml
+++ b/branches/Aaron/approval/approval-war/web/authorisation.xhtml
@@ -44,7 +44,7 @@
                       flowListener="#{authorisation.onFlowProcess}"> 
 
 
-                <p:tab id="authtabdetails" title="authorisation">
+                <p:tab id="authtabdetails" title="Details">
                     <p:panel header="Authorisation Details">
                         <p:panelGrid id="authoriseTopGrid" styleClass="noborders" >
 
@@ -153,10 +153,10 @@
                     </p:panel>
                 </p:tab>
 
-                <p:tab id="authotabCosting" title="authorisation">
+                <p:tab id="authotabCosting" title="Final Costing">
                     <p:panel header="Authorisation Costing">
 
-                        <p:panelGrid id="authoriseFinalCostin" >
+                        <p:panelGrid id="authoriseFinalCostin" >f
 
                             <p:row>
                                 <p:column colspan="1">Final Costing</p:column>
@@ -414,7 +414,7 @@
                     </p:panel>
                 </p:tab>
 
-                <p:tab id="authofromOz" title="authorisation">
+                <p:tab id="authofromOz" title="Recovered from Australia">
                     <p:panel header="Authorisation Cost From Australia">
 
                         <p:panelGrid id="authoriseFromOz" >
@@ -488,7 +488,7 @@
 
                 </p:tab>
 
-                <p:tab id="authotabfinal" title="authorisation">
+                <p:tab id="authotabfinal" title="Authorisation">
                     <p:panel header="Authorisation">
 
                         <p:panelGrid id="authoriseFrom" >
