--- a/branches/marco/Conf_att_request/Conf_att_request-war/web/index.xhtml
+++ b/branches/marco/Conf_att_request/Conf_att_request-war/web/index.xhtml
@@ -7,7 +7,9 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <i:inputComponent inputLabel="Please input my Dick" inputText="bubuta"/>
+        <i:inputComponent inputLabel="Please input my Dick" inputValue="bubuta"/>
+        <h:outputText id="schoolUnit" value="#{conference.travelerP.accountid}"/>
+
         Hello from Facelets
         <br />
         <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
