Fixed spelling mistake for citys -> cities
added input validation
@Pattern(message="Input in Supplier Field is Invalid, */' and numeric digits are not accepted", regexp="[a-zA-Z -]{0,}")

--- a/branches/Aaron/approval/approval-war/web/authorisation.xhtml
+++ b/branches/Aaron/approval/approval-war/web/authorisation.xhtml
@@ -110,13 +110,13 @@
 
                             <p:row>
                                 <p:column>
-                                    <h:outputText value="Destination citys: " />
+                                    <h:outputText value="Destination cities: " />
                                 </p:column>
                                 <p:column colspan="1">
-                                    <p:inputText id="citys" value="#{authorisation.citys}" required="false" requiredMessage="Destination citys is a required Field" />
+                                    <p:inputText id="cities" value="#{authorisation.cities}" required="false" requiredMessage="Destination cities is a required Field" />
                                 </p:column>
                                 <p:column>
-                                    <p:message for="citys"/>
+                                    <p:message for="cities"/>
                                 </p:column>
                             </p:row>
 
