fixed spelling of accommodation

--- a/branches/Aaron/approval/approval-war/web/authorisation.xhtml
+++ b/branches/Aaron/approval/approval-war/web/authorisation.xhtml
@@ -214,16 +214,16 @@
                             <p:row>
 
                                 <p:column>
-                                    <h:outputText value="Accomodation: " />
+                                    <h:outputText value="Accommodation: " />
                                 </p:column>
                                 <p:column>
-                                    <p:inputText id="accomodationBudget" value="#{authorisation.accomodationBudget}" required="true" requiredMessage="Accomodation budgeted Cost is a required Field" />
+                                    <p:inputText id="accomodationBudget" value="#{authorisation.accommodationBudget}" required="true" requiredMessage="Accommodation budgeted Cost is a required Field" />
 
                                 </p:column>
 
                                 <p:column>
 
-                                    <p:inputText id="accomodationCost" value="#{authorisation.accomodationCost}" required="true" requiredMessage="Accomodation actual Cost is a required Field" />
+                                    <p:inputText id="accomodationCost" value="#{authorisation.accommodationCost}" required="true" requiredMessage="Accommodation actual Cost is a required Field" />
                                 </p:column>
                                 <p:column>
                                     <p:message for="accomodationBudget"/>
@@ -236,11 +236,11 @@
 
 
                                 <p:column>
-                                    <h:outputText value="Accomodation number of days: " />
+                                    <h:outputText value="Accommodation number of days: " />
                                 </p:column>
 
                                 <p:column >
-                                    <p:inputText id="accomodationDays" value="#{authorisation.accommodatedays}" required="true" requiredMessage="Accomodation number of days is a required Field" />
+                                    <p:inputText id="accomodationDays" value="#{authorisation.accommodatedays}" required="true" requiredMessage="Accommodation number of days is a required Field" />
                                 </p:column>
 
                                 <p:column>
