--- a/branches/Aaron/approval/approval-war/web/viewAuthorisation.xhtml
+++ b/branches/Aaron/approval/approval-war/web/viewAuthorisation.xhtml
@@ -202,7 +202,7 @@
                         <p:row>
 
                             <p:column>
-                                <h:outputText value="Accomodation: " />
+                                <h:outputText value="Accommodation: " />
                             </p:column>
                             <p:column>
                                 <h:outputText value="#{authorisation.fcostingRef.accommodationbudget}" />
@@ -222,7 +222,7 @@
 
 
                             <p:column>
-                                <h:outputText value="Accomodation number of days: " />
+                                <h:outputText value="Accommodation number of days: " />
                             </p:column>
 
                             <p:column >
