--- a/branches/marco/Conf_att_request/Conf_att_request-war/web/testPage.xhtml
+++ b/branches/marco/Conf_att_request/Conf_att_request-war/web/testPage.xhtml
@@ -7,12 +7,9 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <i:inputComponent inputLabel="Please input my Dick" inputValue="bubuta"/>
-        <h:outputText id="schoolUnit" value="#{conference.travelerP.accountid}"/>
-
-        Hello from Facelets
+        <i:inputComponent inputLabel="Please type something" inputValue="bubuta" />
         <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
+        <h:outputText value="#{conference.travelerP.datemodified}"/>
     </h:body>
 </html>
 
